<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_areas_list">

        <SwitchPreference
            app:key="@string/settings_key_show_percentage"
            app:title="@string/settings_setting_title_show_percentage"
            app:summaryOn="@string/settings_setting_summary_on_show_percentage"
            app:summaryOff="@string/settings_setting_summary_off_show_percentage" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Feedback">

        <Preference
            app:key="@string/settings_key_generosity_box"
            app:title="@string/settings_setting_title_generosity_box"
            app:summary="@string/settings_setting_summary_generosity_box" />

        <Preference
            app:key="@string/settings_key_send_feedback"
            app:title="@string/settings_setting_title_send_feedback" />

    </PreferenceCategory>

</PreferenceScreen>