<?xml version="1.0" encoding="utf-8"?>
<com.jeanbarrossilva.andre.ui.AndreLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginHorizontal="40dp"
    android:orientation="vertical"
    android:verticalSpacing="30dp">

    <com.jeanbarrossilva.andre.ui.AndreLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:verticalSpacing="10dp">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_setting_title_generosity_box"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="?android:textColorPrimary" />

        <TextView
            android:id="@+id/description_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_setting_summary_generosity_box" />

    </com.jeanbarrossilva.andre.ui.AndreLinearLayout>

    <com.jeanbarrossilva.andre.ui.AndreLinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:verticalSpacing="10dp">

        <com.jeanbarrossilva.andre.ui.GenerosityBoxButton
            android:id="@+id/great_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/generosity_box_button_default_elevation"
            android:title="@string/GenerosityBoxFragment_option_great"
            app:emoji="😎"
            tools:price="10" />

        <com.jeanbarrossilva.andre.ui.GenerosityBoxButton
            android:id="@+id/nice_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/generosity_box_button_default_elevation"
            android:title="@string/GenerosityBoxFragment_option_nice"
            app:emoji="😱"
            tools:price="20" />

        <com.jeanbarrossilva.andre.ui.GenerosityBoxButton
            android:id="@+id/amazing_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/generosity_box_button_default_elevation"
            android:title="@string/GenerosityBoxFragment_option_amazing"
            app:emoji="🤯"
            tools:price="30" />

    </com.jeanbarrossilva.andre.ui.AndreLinearLayout>

</com.jeanbarrossilva.andre.ui.AndreLinearLayout>